--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="http://www.parsecdn.com/js/parse-1.0.20.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
   
   <script src="bootstrap/js/bootstrap.js"></script>
   <script src="js/jqplot/jquery.jqplot.js"></script>
@@ -23,7 +22,16 @@
 
   <script type="text/template" id="task-item-template">
     <td>
-      <span class="task-name"><%= name %></span>
+      <% if (selected) { %>
+        <form class="form form-inline form-edit-task">
+          <div class="input-append">
+            <input type="text" class="task-name-edit" value="<%= name %>">
+            <button type="submit" class="btn">OK</button>
+          </div>
+        </form>
+      <% } else { %>
+        <span class="task-name"><%= name %></span>
+      <% } %>
     </td>
     <td>
       <div class="btn-group">
@@ -36,8 +44,14 @@
       <span class="total-duration"><%= formatDuration(duration) %></span>
     </td>
     <td>
-      <a class="btn btn-danger stop-tracking toggle-tracking">Stop</a>
-      <a class="btn btn-mini start-tracking toggle-tracking">Start</a>
+      <div class="btn-group">
+        <% if (active) { %>
+          <a class="btn btn-danger stop-tracking">Stop</a>
+        <% } else { %>
+          <a class="btn btn-info start-tracking">Start</a>
+        <% } %>
+        <a class="btn btn-mini show-details">Details</a>
+      </div>
     </td>
   </script>
 
