Remove bindings from removed list views

--- a/Web/index.html
+++ b/Web/index.html
@@ -187,10 +187,10 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th>Task Name</th>
-          <th>Status</th>
+          <th>Task Name <i class="icon-chevron-down"></i></th>
+          <th>Status <i class="icon-chevron-down"></i></th>
           <th>Time Tracking</th>
-          <th>Time Spent</th>
+          <th>Time Spent <i class="icon-chevron-down"></i></th>
         </tr>
       </thead>
       <tbody>
