--- a/Web/index.html
+++ b/Web/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="js/jqplot/jquery.jqplot.css">
 
   <!-- TODO: Change all http:// URLs to use protocol-relative urls (without "http:") !-->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="http://www.parsecdn.com/js/parse-1.0.20.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+  <script src="http://www.parsecdn.com/js/parse-1.0.23.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
   
   <script src="bootstrap/js/bootstrap.js"></script>
