Support Facebook and Twitter, with preferences, and improve project edit dialog

--- a/Web/index.html
+++ b/Web/index.html
@@ -111,7 +111,8 @@
           </div>
         </div>
         <div class="form-actions">
-          <button class="btn btn-primary" type="submit">LogIn</button>
+        <button class="btn btn-primary" type="submit">LogIn</button>
+        <button class="btn login-facebook" type="button">LogIn with Facebook</button>
         </div>
       </fieldset>
     </form>
